# ascii

./: CMakeLists.txt  Canvas.cpp  MainWindow.cpp  Pixel.cpp  main.cpp  main.cpp.bak
.cache/clangd/index/: Canvas.cpp.341EA9F47CD7BB81.idx  Canvas.cpp.E022554E84E682D8.idx  Canvas.h.0E22AF67FA310A9B.idx  Canvas.h.BA8FBEFE1C20A865.idx  MainWindow.cpp.A1BC120BAAAAAD0B.idx  MainWindow.cpp.EEE0AD254D42790D.idx  MainWindow.h.B5A492269C4148C8.idx  MainWindow.h.E6CFB9CC01404123.idx  Pixel.cpp.1446C4144458DC40.idx  Pixel.cpp.DFA4581EE5BBBDCA.idx  Pixel.h.A01E3118A884BC9A.idx  Pixel.h.A73511556029CB7D.idx  main.cpp.20FFB97B51FC4E4F.idx  main.cpp.3FF8656D67EDC695.idx
include/: Canvas.h  MainWindow.h  Pixel.h
